add right arrow key

--- a/2048/template/index.html
+++ b/2048/template/index.html
@@ -23,6 +23,12 @@
       hx-trigger="keydown[key=='ArrowUp'] from:body"
       hx-swap="outerHTML"
     ></div>
+    <div
+      hx-get="/arrow-key-right"
+      hx-target="#grid"
+      hx-trigger="keydown[key=='ArrowRight'] from:body"
+      hx-swap="outerHTML"
+    ></div>
     <script src="/static/js/htmx.min.js"></script>
   </body>
 </html>
