--- a/2048/template/index.html
+++ b/2048/template/index.html
@@ -10,12 +10,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/static/js/tailwind-config.js"></script>
   </head>
-  <body class="bg-tile-16-colour h-screen w-screen" hx-ext="true">
+  <body class="bg-tile-16-colour h-screen w-screen">
     <h1
       class="pt-4 text-center font-sans text-8xl font-extrabold text-tile-512-colour"
     >
       2048
     </h1>
+    <button
+      class="mr-3 w-20 rounded bg-contrast py-2 px-4 font-bold text-white hover:bg-red-800"
+    >
+      New Game
+    </button>
     <div class="flex justify-center pt-16">{{ template "grid" .}}</div>
     <div
       hx-post="/arrow-key-event"
