--- a/2048/template/index.html
+++ b/2048/template/index.html
@@ -6,7 +6,7 @@
     <title>2048</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="static/css/global.css" />
+    <link rel="stylesheet" href="/static/css/global.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/static/js/tailwind-config.js"></script>
   </head>
@@ -16,12 +16,16 @@
     >
       2048
     </h1>
-    <button
-      class="mr-3 w-20 rounded bg-contrast py-2 px-4 font-bold text-white hover:bg-red-800"
-    >
-      New Game
-    </button>
-    <div class="flex justify-center pt-16">{{ template "grid" .}}</div>
+    <div class="pt-14 flex justify-center items-center">
+      <div class="w-[29rem] flex justify-start">
+        <button
+          class="mr-3 w-[7.6rem] h-[2.7rem] border border-black border-2 rounded bg-button-colour py-2 px-4 font-bold text-black hover:bg-button-hover-colour active:bg-button-active-colour"
+        >
+          New Game
+        </button>
+      </div>
+    </div>
+    <div class="flex justify-center pt-4">{{ template "grid" .}}</div>
     <div
       hx-post="/arrow-key-event"
       hx-target="#grid"
